# goit-python

./: .gitignore  2018_Seattle_Business_Districts.csv  License.txt  README.md  test.py  text.txt
lesson1/: hw1.py  hw2.py  hw3.py
lesson10/: hw10.py
lesson11/: hw11.py
lesson12/: hw12.py
lesson2/: hw3.py  hw3_new.py  hw4.py
lesson3/: hw4.py
lesson4/: hw5.py
lesson5/: hw6.py
lesson6/: hw7.py
lesson7/clean_folder/: setup.cfg  setup.py
lesson7/clean_folder/clean_folder/: __init__.py  __main__.py
lesson7/clean_folder/clean_folder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
lesson8/: hw8.py
lesson9/: hw9.py
lesson_nine/: hw_nine_new.py
new_project/: adressbook.py  helpers.py  new_project.py
