[metadata]

Name = clean_folder
Version = 1.0.0
Summary = This script will be sorting and cleaning the destinationsfolder
Author = teosoph
License = MIT License
descripton = This script will be sorting and cleaning the destinationsfolder
long_descripton = This script will be sorting and cleaning the destinationsfolder

[option]

packages = find:
include_package_data = True
